--- a/Coca-Cola.html
+++ b/Coca-Cola.html
@@ -413,6 +413,7 @@
 
                 <div class="copyright">
 
+            
                     &copy;2024  The Coca‑Cola Company . Tous droits réservés.
                 </div>
 
@@ -423,7 +424,10 @@
 
     </main>
 
-    <footer></footer>
+    <footer>
+
+        <h1> Soumission </h1>
+    </footer>
     
 </body>
 </html>
